// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordChange /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <h1>
        Change your password
      </h1>
      <div
        className="row password"
      >
        <label
          htmlFor="password"
        >
          New Password
        </label>
        <input
          autoComplete="new-password"
          className="input"
          id="password"
          name="newPassword1"
          onChange={[Function]}
          pattern=".{6,}"
          placeholder="Your new Password"
          required={true}
          title="New password must be a minimum of 6 characters"
          type="password"
          value=""
        />
        <PasswordToggleIcon
          inputRef={
            Object {
              "current": null,
            }
          }
          isVisible={false}
          parentClassName=""
        />
      </div>
      <div
        className="row password-confirm"
      >
        <label
          htmlFor="password-confirm"
        >
          Confirm new password
        </label>
        <input
          autoComplete="new-password"
          className="input"
          id="password-confirm"
          name="newPassword2"
          onChange={[Function]}
          pattern=".{6,}"
          placeholder="Re-enter new password"
          required={true}
          title="New password must be a minimum of 6 characters"
          type="password"
          value=""
        />
        <PasswordToggleIcon
          inputRef={
            Object {
              "current": null,
            }
          }
          isVisible={false}
          parentClassName=""
        />
      </div>
      <div
        className="row submit"
      >
        <input
          className="button full"
          type="submit"
          value="Change Password"
        />
      </div>
    </form>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`<PasswordChange /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <h1>
        PASSWORD_CHANGE_TITLE
      </h1>
      <div
        className="row password"
      >
        <label
          htmlFor="password"
        >
          PASSWORD1_LABEL
        </label>
        <input
          autoComplete="new-password"
          className="input"
          id="password"
          name="newPassword1"
          onChange={[Function]}
          pattern=".{6,}"
          placeholder="PASSWORD1_PLACEHOLDER"
          required={true}
          title="PASSWORD1_PATTERN_DESCRIPTION"
          type="password"
          value=""
        />
        <PasswordToggleIcon
          inputRef={
            Object {
              "current": null,
            }
          }
          isVisible={false}
          parentClassName=""
        />
      </div>
      <div
        className="row password-confirm"
      >
        <label
          htmlFor="password-confirm"
        >
          PASSWORD2_LABEL
        </label>
        <input
          autoComplete="new-password"
          className="input"
          id="password-confirm"
          name="newPassword2"
          onChange={[Function]}
          pattern=".{6,}"
          placeholder="PASSWORD2_PLACEHOLDER"
          required={true}
          title="PASSWORD2_PATTERN_DESCRIPTION"
          type="password"
          value=""
        />
        <PasswordToggleIcon
          inputRef={
            Object {
              "current": null,
            }
          }
          isVisible={false}
          parentClassName=""
        />
      </div>
      <div
        className="row submit"
      >
        <input
          className="button full"
          type="submit"
          value="PASSWORD_CHANGE_BUTTON"
        />
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
